<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_kr">광운대학교 유캠퍼스</string>
    <string name="app_name">u-Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button">로그인</string>
    <string name="id_hint">학번</string>
    <string name="pw_hint">비밀번호</string>
    <string name="error_network_connection">네트워크 연결을 확인해 주세요</string>
    <string name="error_id">학번을 입력해 주세요</string>
    <string name="error_pw">비밀번호를 입력해 주세요</string>
    <string name="error_login_info">학번/비밀번호를 확인해 주세요</string>
    <string name="plan_check">강의계획서 조회</string>
    <string name="plan_assign">과제 조회</string>
    <string name="lecture_refer_room">강의 자료실</string>
    <string name="notice">공지사항</string>
    <string name="title_activity_syllabus">강의계획서 조회</string>
    <string name="title_activity_lecture_plan">hohoho</string>
    <string name="title_activity_scholarship">장학 조회</string>
    <string name="title_activity_grade">성적/석차 조회</string>
    <string name="logout_dialog_title">로그아웃</string>
    <string name="logout_dialog_contents">지금 로그아웃할까요?</string>
    <string name="message_no_contents">등록된 내용이 없습니다.</string>
    <string name="message_cancel">취소</string>
    <string name="message_confirm">확인</string>
    <string name="message_info">정보</string>
    <string name="message_logout">로그아웃</string>
    <string name="auto_login">자동 로그인</string>
    <string name="message_refreshed">갱신되었습니다.</string>
    <string name="message_syllabus_missing">강의계획서가 존재하지 않거나 잘못되었습니다. 온라인 강의일 경우 강의계획서가 존재하지 않을 수 있습니다.<![CDATA["<br>"]]>(<![CDATA["<a href="http:info.kw.ac.kr>"]]>http://info.kw.ac.kr<![CDATA["</a>"]]> 에서 확인해 주세요.) </string>
    <string name="message_grade_missing">등록된 성적이 없거나 정보를 가져올 수 없습니다. <![CDATA["<br>"]]>(<![CDATA["<a href="http:info.kw.ac.kr>"]]>http://info.kw.ac.kr<![CDATA["</a>"]]> 에서 확인해 주세요.) </string>
    <string name="message_scholar_missing">등록된 장학 수혜 현황이 없거나 정보를 가져올 수 없습니다. <![CDATA["<br>"]]>(<![CDATA["<a href="http:info.kw.ac.kr>"]]>http://info.kw.ac.kr<![CDATA["</a>"]]> 에서 확인해 주세요.) </string>
    <string name="notice_content">
        학교에서 제작한 공식 어플리케이션이 아닙니다. 어플 사용으로 생기는 불이익에 대해 책임지지 않습니다.\n
        유캠퍼스의 레이아웃이 변경되면 작동하지 않을 수도 있습니다.\n\n


        유캠퍼스의 일부 기능을 스마트폰에서 사용할 수 있는 어플입니다.\n
        학번과 비밀번호는 로그인 용도로만 사용되며, 외부로 전송되지 않습니다.\n\n

        특징\n
        - 과목별 공지사항/강의자료실/강의계획서 조회\n
        - 중앙 도서관 열람실현황/도서검색\n
        - 학기별 성적/장학 조회\n\n

        버그 및 건의사항 대환영\n
        - qpseh2m7@gmail.com\n
    </string>
    <string name="title_activity_library_seat_info">열람실 좌석 현황</string>
    <string name="attatch">첨부 파일</string>
    <string name="title_activity_library_book_search">자료 검색</string>
    <string name="title_activity_lec_refer_room">강의 자료실</string>
    <string name="title_activity_lec_refer_disp">강의 자료실</string>
    <string name="title_activity_notice">공지사항</string>
    <string name="title_activity_notice_view">공지사항</string>
    <string name="title_activity_dining">DiningActivity</string>
    <string name="title_activity_lecture_search">강의 계획서 검색</string>
    <string name="title_activity_assignment_view">과제 확인</string>
    <string name="title_activity_board_home_view">BoardHomeView</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_board_article_view">로딩중...!</string>
    <string name="title_activity_create_article_view">게시판 글쓰기</string>
    <string name="title_activity_student_refer_view">학생 자료실</string>
    <string name="title_activity_qna">강의 QnA</string>
    <string name="title_activity_qna_article_view">강의 QnA</string>
    <string name="title_activity_opinion_view">의견 보내기</string>
</resources>
