<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <EditText
        android:id="@+id/text_id"
        android:textColorHint="#cccccc"
        android:background="@drawable/login_text_state"
        android:hint="@string/id_hint"
        android:textSize="20dp"
        android:singleLine="true"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/text_pw"
        android:textColorHint="#cccccc"
        android:background="@drawable/login_text_state"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:layout_width="300dp"
        android:layout_height="30dp"/>
    <TextView
        android:layout_below="@+id/text_pw"
        android:id="@+id/error_message_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_login_info"
        android:visibility="gone"/>
</RelativeLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:text="@string/login_button"
        android:textSize="18dp"
        android:layout_height="40dp"
        android:textColor="#fff"
        android:background="@drawable/login_button_state"
        android:id="@+id/login_button"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="자동 로그인"
        android:id="@+id/auto_login" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_login"
        android:visibility="invisible"/>

</LinearLayout>