<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:text="@string/logout_dialog_title"
            android:textColor="#000"
            android:paddingTop="12dp"
            android:paddingBottom="2dp"
            android:paddingLeft="19dp"
            android:paddingRight="5dp"
            android:id="@+id/dialog_title"
            android:singleLine="true"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:clickable="true"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_height="40dp"
            android:textSize="17dp"
            android:paddingLeft="19dp"
            android:paddingRight="5dp"
            android:id="@+id/dialog_menu1"
            android:text="@string/logout_dialog_contents"
            android:layout_width="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingBottom="11dp">
        <TextView
            android:id="@+id/logout_canel"
            android:clickable="true"
            android:background="@drawable/main_dialog_state"
            android:textColor="#000"
            android:layout_height="40dp"
            android:textSize="17dp"
            android:text="@string/message_cancel"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
        <TextView
            android:id="@+id/logout_confirm"
            android:clickable="true"
            android:background="@drawable/main_dialog_state"
            android:textColor="#a70500"
            android:layout_height="40dp"
            android:textSize="17dp"
            android:text="@string/message_logout"
            android:layout_width="wrap_content"
            android:layout_marginRight="11dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical" />

    </LinearLayout>
</LinearLayout>